--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-site_title = "MyArxiv"
-limit_days = 7
-cache_url = "https://mlnlp-world.github.io/MyArxiv/cache.json"
+asite_title = "MyArxiv"
+limit_days = 14
+cache_url = "https://Yukeaaa.github.io/MyArxiv/cache.json"
 
 [[sources]]
 limit = 150
