--- a/config.toml
+++ b/config.toml
@@ -4,18 +4,8 @@ cache_url = "https://Yukeaaa.github.io/MyArxiv/cache.json"
 
 [[sources]]
 limit = 150
-category = "cs.CL"
-title = "Computation and Language"
-
-[[sources]]
-limit = 150
 category = "cs.CV"
 title = "Computer Vision and Pattern Recognition"
-
-[[sources]]
-limit = 150
-category = "cs.IR"
-title = "Information Retrieval"
 
 [[sources]]
 limit = 150
@@ -24,8 +14,48 @@ title = "Machine Learning"
 
 [[sources]]
 limit = 150
+category = "cs.HC"
+title = "Human-Computer Interaction"
+
+[[sources]]
+limit = 150
+category = "cs.SE"
+title = "Software Engineering"
+
+[[sources]]
+limit = 150
+category = "cs.SY"
+title = "Systems and Control"
+
+[[sources]]
+limit = 150
+category = "cs.GR"
+title = "Graphics"
+
+[[sources]]
+limit = 150
+category = "cs.CL"
+title = "Computation and Language"
+
+[[sources]]
+limit = 150
+category = "cs.IR"
+title = "Information Retrieval"
+
+[[sources]]
+limit = 150
 category = "cs.MM"
 title = "Multimedia"
+
+[[sources]]
+limit = 150
+category = "eess.IV"
+title = "Image and Video Processing"
+
+[[sources]]
+limit = 150
+category = "eess.SY"
+title = "Systems and Control"
 
 [scripts]
 highlight_title = "scripts/highlight_title.rhai"
